force-app/main/default/objects/APXTConga4__Composer_QuickMerge__c/fields/APXTConga4__Weblink_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Weblink_ID_Formula__c</fullName>
    <formula>LEFT(APXTConga4__Weblink_ID__c, 15)</formula>
    <label>Button ID</label>
    <type>Text</type>
</CustomField>