force-app/main/default/objects/APXTConga4__Composer_QuickMerge__c/fields/APXTConga4__Weblink_Name__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Weblink_Name__c</fullName>
    <label>Button Name</label>
    <type>TextArea</type>
</CustomField>