force-app/main/default/objects/APXTConga4__Composer_QuickMerge__c/fields/APXTConga4__Weblink_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Weblink_Name_Formula__c</fullName>
    <formula>APXTConga4__Weblink_Name__c</formula>
    <label>Button Name</label>
    <type>Text</type>
</CustomField>